--- a/src/web-fls-quiz/Properties/launchSettings.json
+++ b/src/web-fls-quiz/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "Kestrel": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:5500",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
