--- a/src/web-fls-quiz/Properties/launchSettings.json
+++ b/src/web-fls-quiz/Properties/launchSettings.json
@@ -1,7 +1,7 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:11864",
       "sslPort": 44347
@@ -18,10 +18,10 @@
     "Kestrel": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5500",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5500"
     }
   }
 }
