--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,39 @@
 configuration: Release
 
-image: Visual Studio 2019
+environment:
+  DOCKER_USER:
+    secure: TUkS9BRix2EaX6263HzABg==
+  DOCKER_PASS:
+    secure: Q1RiZsWAMyXDY9VF6erhkg==
+
+image: Ubuntu
 
 before_build:
-  - dotnet restore src
+- dotnet restore ./src/WebFlsQuiz.sln
 
-build:
-  verbosity: minimal
+build_script:
+- dotnet build ./src/WebFlsQuiz.sln -v m --no-restore
+
+deploy_script:
+- ps: >-
+
+    if(("$env:APPVEYOR_REPO_BRANCH" -eq "master") -and ("$env:APPVEYOR_REPO_TAG" -eq $true))
+    {
+        Write-Host "Release deployment scenario. Branch:" $env:APPVEYOR_REPO_BRANCH
+
+        Write-Host "Branch tag:" $env:APPVEYOR_REPO_TAG_NAME
+
+        docker build -t vkamiansky/flsquiz ./src/WebFlsQuiz/
+
+        docker login -u $env:DOCKER_USER -p $env:DOCKER_PASS
+
+        docker push vkamiansky/flsquiz
+
+        Write-Host "Success"
+    }
+    else
+    {
+        Write-Host "Routine build scenario. Branch:" $env:APPVEYOR_REPO_BRANCH
+    }
+
+    exit 0
