--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,13 +9,11 @@ environment:
 image: Ubuntu
 
 before_build:
-- dotnet restore ./src/bundle-maker/BundleMaker.csproj
-- dotnet build ./src/bundle-maker/BundleMaker.csproj -v m --no-restore -c Release
-- dotnet run --project ./src/bundle-maker/BundleMaker.csproj
-- dotnet restore ./src/WebFlsQuiz.sln
+- dotnet restore ./build/_build.csproj
 
 build_script:
-- dotnet build ./src/WebFlsQuiz.sln -v m --no-restore -c Release
+- dotnet build ./build/_build.csproj -v m --no-restore -c Release
+- dotnet run --project ./build/_build.csproj
 
 deploy_script:
 - ps: >-
@@ -26,7 +24,7 @@ deploy_script:
 
         Write-Host "Branch tag:" $env:APPVEYOR_REPO_TAG_NAME
 
-        docker build -t vkamiansky/flsquiz ./src/WebFlsQuiz/
+        docker build -t vkamiansky/flsquiz ./src/web-fls-quiz/
 
         docker login -u $env:DOCKER_USER -p $env:DOCKER_PASS
 
